--- a/state-machine-core/build.gradle
+++ b/state-machine-core/build.gradle
@@ -9,3 +9,11 @@ dependencies {
 
 sourceCompatibility = "7"
 targetCompatibility = "7"
+
+ext {
+    PUBLISH_GROUP_ID = 'com.github.vanspo'
+    PUBLISH_ARTIFACT_ID = 'state-machine'
+    PUBLISH_VERSION = '0.1'
+}
+
+apply from: "${rootProject.projectDir}/scripts/publish-maven.gradle"
