--- a/scripts/publish-maven.gradle
+++ b/scripts/publish-maven.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
+apply plugin: 'org.jetbrains.dokka'
 
 group = PUBLISH_GROUP_ID
 version = PUBLISH_VERSION
@@ -27,6 +28,22 @@ if (secretPropsFile.exists()) {
     ext["ossrhPassword"] = System.getenv('OSSRH_PASSWORD')
 }
 
+task sourcesJar(type: Jar, dependsOn: project.classes) {
+    from sourceSets.main.allSource
+}
+
+dokka {
+    outputFormat = 'html'
+    outputDirectory = "$buildDir/javadoc"
+}
+
+task dokkaJar(type: Jar, dependsOn: project.classes) {
+    group = JavaBasePlugin.DOCUMENTATION_GROUP
+    description = "Assembles Kotlin docs with Dokka"
+    classifier = "javadoc"
+    from(tasks.dokka)
+}
+
 publishing {
     publications {
         release(MavenPublication) {
@@ -34,6 +51,9 @@ publishing {
             artifactId PUBLISH_ARTIFACT_ID
             version PUBLISH_VERSION
 
+            artifact("$buildDir/libs/${project.getName()}-${PUBLISH_VERSION}.jar")
+            artifact sourcesJar { classifier = 'sources' }
+            artifact dokkaJar
             pom {
                 name = PUBLISH_ARTIFACT_ID
                 description = 'A Kotlin State Machine DSL'
