--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlinVersion = '1.3.72'
-    ext.gradleVersion = '4.0.0-beta01'
+    ext.kotlinVersion = '1.4.10'
+    ext.gradleVersion = '4.1.0'
 
     repositories {
         google()
