--- a/state-machine-android/build.gradle
+++ b/state-machine-android/build.gradle
@@ -4,10 +4,11 @@ apply plugin: 'kotlin'
 dependencies {
     implementation project(":state-machine-core")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation  "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
+    implementation  "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    testImplementation "junit:junit:4.12"
+    testImplementation "junit:junit:4.5"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
 }
 
 ext {
